[package]
name = "adventofcode-2023"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.1"
authors = ["Romiro <romiro@hotmail.com.br>"]
license = "MIT OR Apache-2.0"
description = "AdventOfCode 2023 see https://adventofcode.com/2023"
repository = "https://github.com/Romiro13/Adventofcode-2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "3"
itertools = "0.12.0"
anyhow = "1"